--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,13 +32,13 @@
         <div class="grid-box-long">
           <%= image_tag "China-Agriculture.jpg", class: "grid-box-image-long" %>
           <div class="text-inner-box">
-            <p>In many countries, agriculture value-chains are a major source of income. With the prevalance of women in the agricultural labour force, by working with agri-business, there is great potential to transform the livelihoods of many.</p>
+            <p>In many countries, agriculture value-chains are a major source of income. With the prevalance of women in the agricultural labour force, there is great potential to transform the livelihoods of many.</p>
           </div>
         </div>
         <div class="grid-box-long">
           <%= image_tag "Turkey-Cityscape.jpg", class: "grid-box-image-long" %>
           <div class="text-inner">
-            <p>Trade is central to economic growth. Digital solutions that facilitate new mechanisms for operation are critical in sustaining prosperity. </p>
+            <p>Trade is central to economic growth. Digital solutions that facilitate new operating mechanisms are critical in sustaining prosperity. </p>
           </div>
         </div>
       </div>
