--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
         </div>
         <div class="grid-box-long">
           <%= image_tag "Turkey-Cityscape.jpg", class: "grid-box-image-long" %>
-          <div class="text-inner">
+          <div class="text-inner-box2">
             <p>Trade is central to economic growth. Digital solutions that facilitate new operating mechanisms are critical in sustaining prosperity. </p>
           </div>
         </div>
@@ -45,7 +45,7 @@
       <div class="col-lg-5 col-md-12 box-tr-padding">
         <div class="box-top-right">
           <%= image_tag "Miyajima-Japan.jpg", class: "box-top-right-image" %>
-          <div class="text-inner">
+          <div class="text-inner-box3">
             <p>Human action is having a devastating impact on our oceans, seas and the wider ecosystem. Behavioural change has to be carefully planned.</p>
           </div>
         </div>
