--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -4,7 +4,7 @@
   <div class="block team-bio-header content dark">
     <div class="rows vertical-center-row">
       <div class="medium-5 columns">
-        <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "staff-image" %>
+        <%= cl_image_tag @staff.image.key, class: "staff-image" %>
       </div>
       <div class="medium-7 columns staff-job-desc">
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
