--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,21 +38,7 @@
             <a href="#">Blog</a>
           </li>
           <li class="nav-link" style="--i: 2.2s">
-            <a href="#">Map<i class="fas fa-caret-down rotate"></i></a>
-            <div class="dropdown">
-              <ul>
-                <li class="arrow"></li>
-                <li class="dropdown-link">
-                  <a href="#">Link 4</a>
-                </li>
-                <li class="dropdown-link">
-                  <a href="#">Link 5</a>
-                </li>
-                <li class="dropdown-link">
-                  <a href="#">Link 6</a>
-                </li>
-              </ul>
-            </div>
+            <%= link_to "Videos", videos_path %>
           </li>
           <li class="nav-link" style="--i: 2.6s">
             <a href="#contacts">Contact Us</a>
