added blog pages

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,19 +29,19 @@
             </div>
           </li>
           <li class="nav-link" style="--i: .9s">
-            <a href="#strategy">What We Do</a>
+            <a href="http://www.bisimpact.com#strategy">What We Do</a>
           </li>
           <li class="nav-link" style="--i: 1.4s">
             <%= link_to 'Our Team', staff_index_path %>
           </li>
           <li class="nav-link" style="--i: 1.8s">
-            <a href="#">Blog</a>
+            <%= link_to 'Blog', blogs_path %>
           </li>
           <li class="nav-link" style="--i: 2.2s">
             <%= link_to "Videos", videos_path %>
           </li>
           <li class="nav-link" style="--i: 2.6s">
-            <a href="#contacts">Contact Us</a>
+            <a href="http://www.bisimpact.com#contacts">Contact Us</a>
           </li>
         </ul>
       </div>
