--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -39,7 +39,7 @@
 .rows {
   display: flex;
   @media only screen and (max-width: 768px) {
-    flex-direction: column;
+    // flex-direction: column;
   }
 }
 .staff-job-desc {
