--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -2,14 +2,15 @@
   <h2>Related Videos</h2>
   <p>Lorem ipsum, dolor sit amet.</p>
   <div class="videos " id="video">
-    <div>
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div>
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div>
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+      <h4 class="mt-4">Some text above the video</h4>
+
+      <iframe width="90%" height="515" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h4 class="mt-4">Some text above the video</h4>
+
+      <iframe width="90%" height="515" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h4 class="mt-4">Some text above the video</h4>
+
+      <iframe width="90%" height="515" src="https://www.youtube.com/embed/2OCVdpklnWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
   </div>
 </div>
