have added services pages and made responsive all of them plus blog pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,6 @@
 @import "pages/videos";
 @import "blogs/index";
 @import "blogs/show";
+@import "services/design";
+@import "services/sustainability";
+@import "services/transformation";
