--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,13 +16,13 @@
               <ul>
                 <li class="arrow"></li>
                 <li class="dropdown-link">
-                  <a href="#">Link 1</a>
+                  <%= link_to "Design", design_path %>
                 </li>
                 <li class="dropdown-link">
-                  <a href="#">Link 2</a>
+                  <%= link_to "Sustainability", sustainability_path %>
                 </li>
                 <li class="dropdown-link">
-                  <a href="#">Link 3</a>
+                  <%= link_to "Transformation", transformation_path %>
                 </li>
 
               </ul>
