--- a/app/assets/stylesheets/pages/_videos.scss
+++ b/app/assets/stylesheets/pages/_videos.scss
@@ -3,7 +3,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   iframe {
     padding: 20px;
   }
