--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,8 +54,10 @@ html,body
   min-width: 100%;
   z-index: -1;
   height: 100vh;
+  background-size: cover;
+  background-position: 50% 50%;
   object-fit: cover;
-  background-color: black;;
+  background-color: #066579;;
 }
 
 .banner {
@@ -65,6 +67,7 @@ html,body
   height: 84vh;
   text-align: center;
   margin: 0!important;
+  
 }
 .banner-logo {
   width: 500px;
