--- a/app/assets/stylesheets/pages/_videos.scss
+++ b/app/assets/stylesheets/pages/_videos.scss
@@ -8,3 +8,37 @@
     padding: 20px;
   }
 }
+
+// -------------media query breakpoints-------
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .videos {
+    iframe {
+      padding:20px;
+      width: 100%; 
+    }
+  }
+}
+
+/* Small devices (tablets and large phones, 600px and upto 768px) */
+@media only screen and (min-width: 600px) and (max-width: 768px){
+
+  .videos {
+    iframe {
+      padding:20px;
+      width: 100%; 
+    }
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) and (max-width: 992px){
+
+  .videos {
+    iframe {
+      padding:20px;
+      width: 90%; 
+    }
+  }
+}
