--- a/app/views/shared/_team-images.html.erb
+++ b/app/views/shared/_team-images.html.erb
@@ -3,7 +3,7 @@
     <div class="team-box">
       <%#= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
       <!--  -->
-      <div class='staff-image'>
+      <div class="staff-image">
         <%= cl_image_tag s.image.key %>
       </div>
       <div class="team-name">
