text replacing service placeholders

--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -36,9 +36,9 @@
 <br>
 <div class="container">
   <div class="content">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente accusamus beatae eius! Ducimus tempora qui sed commodi. Nostrum odio architecto corporis rem quaerat molestias ut laboriosam deserunt ullam temporibus. Unde optio et, animi iure, earum a numquam, quis alias nihil facere temporibus fugit illum aliquid, obcaecati repellat fuga velit.</p>
+    <p>In generations gone, the relationships we fostered and the human interactions we had were central to success. Though these elements are still important, we must now appreciate the role of technology. It allows us to reach newer places and enables a faster information distribution environment. Designing institutions that are cognisant of this new operating environment allows for social impact to be baked in from the offset. It is no longer an afterthought but something that can be targetted and planned for - both meticulously and powerfully.</p>
     <br>
-    <h3 class="text-center">We can do bla bla</h3>
+    <h3 class="text-center">We leverage our past experiences in social impact to provide an unseen voice in supporting our clients' success when entering new markets or thematic areas.</h3>
     <br>
     <br>
     <p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Consequatur minus cupiditate, hic ab numquam saepe quos possimus repellendus. Eum dolor repellat excepturi aperiam dignissimos minus labore, in, placeat adipisci voluptatem molestias quas at quidem laudantium ad, veniam. Illum atque, reiciendis enim quibusdam eos adipisci sequi perspiciatis nesciunt nam nisi nihil, quod, tempora reprehenderit. Quo fugit nemo similique nostrum, atque eveniet alias modi quod animi in sapiente doloribus corporis repellendus? Dolorum cupiditate minus quia? Voluptatum, quam! Placeat eius quam sint quo fugit doloremque hic animi ea corporis maiores exercitationem laborum odio illum deleniti possimus voluptatum nam, iusto eum earum modi ipsam!</p>
