--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -36,9 +36,11 @@
 <br>
 <div class="container">
   <div class="content">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente accusamus beatae eius! Ducimus tempora qui sed commodi. Nostrum odio architecto corporis rem quaerat molestias ut laboriosam deserunt ullam temporibus. Unde optio et, animi iure, earum a numquam, quis alias nihil facere temporibus fugit illum aliquid, obcaecati repellat fuga velit.</p>
+    <p>Recent events have made the entire world think about the status-quo. Let us use the analogy of trees being cutdown in forests. Sometimes when an old tree is removed, there remains a gap. Soon however, new growth occurs - how institutions choose to respond to challenging circumstances is often an explanator of divergent outcomes.
+    <br><br>
+    BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to societal success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
     <br>
-    <h3 class="text-center">We can do bla bla</h3>
+    <h3 class="text-center">We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service/product delivery.</h3>
     <br>
     <br>
     <p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Consequatur minus cupiditate, hic ab numquam saepe quos possimus repellendus. Eum dolor repellat excepturi aperiam dignissimos minus labore, in, placeat adipisci voluptatem molestias quas at quidem laudantium ad, veniam. Illum atque, reiciendis enim quibusdam eos adipisci sequi perspiciatis nesciunt nam nisi nihil, quod, tempora reprehenderit. Quo fugit nemo similique nostrum, atque eveniet alias modi quod animi in sapiente doloribus corporis repellendus? Dolorum cupiditate minus quia? Voluptatum, quam! Placeat eius quam sint quo fugit doloremque hic animi ea corporis maiores exercitationem laborum odio illum deleniti possimus voluptatum nam, iusto eum earum modi ipsam!</p>
