--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -36,9 +36,9 @@
 <br>
 <div class="container">
   <div class="content">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente accusamus beatae eius! Ducimus tempora qui sed commodi. Nostrum odio architecto corporis rem quaerat molestias ut laboriosam deserunt ullam temporibus. Unde optio et, animi iure, earum a numquam, quis alias nihil facere temporibus fugit illum aliquid, obcaecati repellat fuga velit.</p>
+    <p>Over the last 100 years, the way we as people and our institutions interact within the global economy has massively shifted. In many ways, we have seen the onset of a third-wave of globalisation. With that, there comes large trade-offs in decision-making. There is a complex mix of opportunities and risks, and a growing awareness that strategic choices must consider long(er) time horizons. Decision-makers really must consider their supply-chains and their impact on the environment; the services they provide and the precedents they set; the need to diversify to guard against exogeneous shocks but at the same time, the importance of generating prolonged employment opportunities for communities far and wide. </p>
     <br>
-    <h3 class="text-center">We can do bla bla</h3>
+    <h3 class="text-center">We help our partners to pivot their ways of working and make the best choices now.</h3>
     <br>
     <br>
     <p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Consequatur minus cupiditate, hic ab numquam saepe quos possimus repellendus. Eum dolor repellat excepturi aperiam dignissimos minus labore, in, placeat adipisci voluptatem molestias quas at quidem laudantium ad, veniam. Illum atque, reiciendis enim quibusdam eos adipisci sequi perspiciatis nesciunt nam nisi nihil, quod, tempora reprehenderit. Quo fugit nemo similique nostrum, atque eveniet alias modi quod animi in sapiente doloribus corporis repellendus? Dolorum cupiditate minus quia? Voluptatum, quam! Placeat eius quam sint quo fugit doloremque hic animi ea corporis maiores exercitationem laborum odio illum deleniti possimus voluptatum nam, iusto eum earum modi ipsam!</p>
