--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -31,7 +31,7 @@
 </div>
 <br>
 <br>
-<h1 class="text-center">AREAS OF EXPERTISE</h1>
+<h1 class="text-center">OUR UNDERSTANDING</h1>
 <br>
 <br>
 <div class="container">
@@ -41,15 +41,11 @@
     BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to societal success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
     <br>
     <h3 class="text-center">We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service/product delivery.</h3>
-    <br>
-    <br>
-    <p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Consequatur minus cupiditate, hic ab numquam saepe quos possimus repellendus. Eum dolor repellat excepturi aperiam dignissimos minus labore, in, placeat adipisci voluptatem molestias quas at quidem laudantium ad, veniam. Illum atque, reiciendis enim quibusdam eos adipisci sequi perspiciatis nesciunt nam nisi nihil, quod, tempora reprehenderit. Quo fugit nemo similique nostrum, atque eveniet alias modi quod animi in sapiente doloribus corporis repellendus? Dolorum cupiditate minus quia? Voluptatum, quam! Placeat eius quam sint quo fugit doloremque hic animi ea corporis maiores exercitationem laborum odio illum deleniti possimus voluptatum nam, iusto eum earum modi ipsam!</p>
   </div>
-  <br>
   <br>
 </div>
 <br>
-<h1 class="text-center">RECENT WORK</h1>
+<h1 class="text-center">EXAMPLE WAYS OF HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
   <div class="card" style="width: 18rem;">
