--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
     <div class="row second-wrap">
       <div class="col-lg-3 col-md-12 grid-bottom-padding">
         <div class="grid-bottom">
-          <%= cl_image_tag("joajmabi3oh9xgvp1cpc", class: "grid-bottom-image") %>
+          <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "grid-bottom-image") %>
           <div class="text-inner">
             <p>Lorem ipsum, dolor sit.</p>
           </div>
@@ -63,7 +63,7 @@
       </div>
       <div class="col-lg-6 col-md-6 grid-bottom-padding">
         <div class="grid-bottom">
-          <%= image_tag "China-Mountains.jpg", class: "grid-bottom-image" %>
+          <%= image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603926106/post_office_myb7n5.jpg", class: "grid-bottom-image" %>
           <div class="text-inner-box3">
             <p>Though rural-urban migration has increased, preserving anicent ways of living helps retain many of the cultural practices we have come to celebrate. </p>
           </div>
