--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -7,13 +7,13 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <!-- <img class="d-block w-100" src="China-Boats.jpg" alt="First slide"> -->
-      <%= image_tag "China-Agriculture.jpg", class: "d-block w-100 " %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604007343/Stonetown_woj4ss.jpg", class: "d-block w-100 " %>
     </div>
     <div class="carousel-item">
-      <%= image_tag "Rwanda-Landscape.jpg", class: "d-block w-100 h-311" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604007344/Tunis_z2po4b.jpg", class: "d-block w-100 h-311" %>
     </div>
     <div class="carousel-item">
-      <%= image_tag "Turkey-Cityscape.jpg", class: "d-block w-100" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604007344/New_York_fms682.jpg", class: "d-block w-100" %>
     </div>
     <div class="carousel-caption d-none d-md-block">
     <h3>Transformation</h3>
