some changes to homepage text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
   <!-- ---------------------------- -->
 
   <div class="text-big" data-aos="fade-right">
-    <h2>We are a group of analytically minded individuals, who seek to provide a new perspective on how organisational value can be distributed.</h2>
+    <h2>BisImpact is a social impact consultancy that supports its clients to improve results in a meaningful way.</h2>
   </div>
 
   <!-- ---------css grid-------------- -->
@@ -82,7 +82,7 @@
 
   <!-- -----------------strategy----------- -->
   <div id="strategy" class="text-big" data-aos="fade-right">
-    <h2>Known as experts at supporting corporate entities and philanthropists to make a social difference.</h2>
+    <h2>We advise institutional leaders and other changemakers on the broader implications of management decisions e.g. on the climate, in job creation and social consequences by taking into account multiplier and spillover effects.</h2>
     <br>
     <p>For us, growth of the bottom-line is not enough. In the 21st century, clients and consumers now expect to see their partners of choice contribute back into society. We work closely with businesses that are attuned to these ground realities and want to make a social contribution back, to do so in the most constructive way. We apply our expertise in Economics and Consultancy to help management teams identify the causes they want to support, the areas where they can create additional value and support them to really make a difference.
     We support philanthropists with their deepest passions. Having a vision is one thing, but knowing how to execute is another.</p>
@@ -92,16 +92,16 @@
       <%= image_tag "Rwanda-Landscape.jpg", class: "lg-photos" %>
   </div>
   <div class="text-big" data-aos="fade-left">
-    <h2>Trust</h2>
-    <p>WE EARN IT.</p>
+    <h2>We are a group of analytically minded individuals who seek to provide a new perspective on decision-making through evidence based advice.</h2>
+    <p>In everything we do, we realise it is important to first identify the areas where additionality can be brought. That way, we can leverage scarce resource to have maximum impact and not crowd out or substitute the positive work of others.</p>
   </div>
 
   <div class="photos-divs pic-2" data-aos="flip-right">
     <%= image_tag "Rwanda-Traditional-Dance.jpg", class: "lg-photos" %>
   </div>
   <div class="text-big" data-aos="fade-right">
-    <h2>Partnership </h2>
-    <p>WE EMPHASIZE IT.</p>
+    <h2>Known as experts at supporting corporate entities and philanthropists to make a social difference.</h2>
+    <p>Our people have professional and academic backgrounds that can be directly leveraged to stimulate a canvass of uncaptured viewpoints. By contributing in this way, we diversify mindsets and enhance outcomes. At the same time, our staff are alert to the necessary goals of our stakeholders.</p>
   </div>
   <div class="photos-divs pic-3" data-aos="flip-left">
     <%= image_tag "Tunisia-Market.jpg", class: "lg-photos" %>
