--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -7,16 +7,16 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <!-- <img class="d-block w-100" src="China-Boats.jpg" alt="First slide"> -->
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Tokyo_city_oqielq.jpg", class: "d-block w-100 " %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Tokyo_city_oqielq.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-item">
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009348/Tanzania_museum_ltnl3f.jpg", class: "d-block w-100 h-311" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009348/Tanzania_museum_ltnl3f.jpg", class: "gg d-block w-100 h-311 gg" %>
     </div>
     <div class="carousel-item">
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Rwanda_roads_ktn1gn.jpg", class: "d-block w-100" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Rwanda_roads_ktn1gn.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-caption d-none d-md-block">
-    <h3>Design</h3>
+    <h3 class="gg">Design</h3>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
