--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -7,13 +7,13 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <!-- <img class="d-block w-100" src="China-Boats.jpg" alt="First slide"> -->
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603924486/Train_zvi9ox.jpg", class: "d-block w-100 gg" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603924486/Train_zvi9ox.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-item">
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922037/Pagoda_clbwka.jpg", class: "d-block w-100 gg" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922037/Pagoda_clbwka.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-item">
-      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922036/Tanzania_white_xrns7y.jpg", class: "d-block w-100 gg" %>
+      <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922036/Tanzania_white_xrns7y.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-caption d-none d-md-block">
     <h3>Sustainability</h3>
