--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,7 +101,7 @@
   </div>
   <div class="text-big" data-aos="fade-right">
     <h2>Known as experts at supporting corporate entities and philanthropists to make a social difference.</h2>
-    <p>Our people have professional and academic backgrounds that can be directly leveraged to stimulate a canvass of uncaptured viewpoints. By contributing in this way, we diversify mindsets and enhance outcomes. At the same time, our staff are alert to the necessary goals of our stakeholders.</p>
+    <p>Our people have professional and academic backgrounds that can be directly utilised to stimulate a canvass of uncaptured viewpoints. By contributing in this way, we diversify mindsets and enhance outcomes. At the same time, our staff are alert to the necessary goals of our stakeholders.</p>
   </div>
   <div class="photos-divs pic-3" data-aos="flip-left">
     <%= image_tag "Tunisia-Market.jpg", class: "lg-photos" %>
