--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,6 @@
             <a href="#">Services<i class="fas fa-caret-down rotate"></i></a>
             <div class="dropdown">
               <ul>
-                <li class="arrow"></li>
                 <li class="dropdown-link">
                   <%= link_to "Design", design_path %>
                 </li>
@@ -24,7 +23,7 @@
                 <li class="dropdown-link">
                   <%= link_to "Transformation", transformation_path %>
                 </li>
-
+                <div class="arrow"></div>
               </ul>
             </div>
           </li>
