--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -178,12 +178,12 @@ html,body
   left: 0;
 }
 .text-inner-box3 {
-  background: rgba(115, 197, 201, .85);
+  background: rgba(169, 130, 15, .8);
   width: 100%;
   font-size: 16.5px;
   text-align: center;
   padding-top: 10px;
-  color: black;
+  color: $second-color;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -200,11 +200,11 @@ html,body
   bottom: 0;
 }
 .text-inner-box {
-  background: rgba(115, 197, 201, .85);
+  background: rgba(169, 130, 15, .8);
   width: 40%;
   text-align: center;
   padding-top: 10px;
-  color:  black;
+  color:  $second-color;
   position: absolute;
   top: 0;
   left: 0;
@@ -424,8 +424,8 @@ right: 20px;
     padding-right: 15px;
   }
   .text-inner-box {
-    width: 50%;
-    padding: 10px 0px;
+    width: 45%;
+    padding: 5px 0px;
     font-size: 16.5px;
   }
   .text-inner {
@@ -435,8 +435,9 @@ right: 20px;
     font-size: 16.5px;
   }
   .text-inner-box2 {
-    padding-top: 26px;
+    padding-top: 33px;
     font-size: 16.5px;
+    width: 45%;
   }
   .back-to-top {
     font-size: 3.2em;
@@ -473,7 +474,7 @@ right: 20px;
     width: 400px;
   }
   .text-big {
-    padding: 80px;
+    padding: 60px;
   }
   .box-long-padding{
     padding-right: 22px;
@@ -481,6 +482,9 @@ right: 20px;
   }
   .grid-bottom-padding {
     padding-right: 7px;
+  }
+  .text-inner-box {
+    padding-top: 22px;
   }
   .back-to-top {
     font-size: 3.5em;
